--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p>Hello, world!</ p>
+<! DOCTYPE html>
+<html> 
+    <head>
+        <title> Life hacks</title>
+        <meta name= "keywords" content="Food, doing chores, house materials"
+        <meta name= "author"   content= "Taneya Becton">
+      </head>
+      <body>
+        <p>How to make a person's life easier:</p>
+        <p>A second paragraph about cats </p>
+      </body>
+    </html>
