--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
       </head>
       <body>
         <p>How to make a person's life easier:</p>
-        <p>A second paragraph about cats </p>
+        <p>A second paragraph about life hacks </p>
       </body>
     </html>
