--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html> 
     <head>
-        <title> Life hacks</title>
+        <title> Life hacks that could make things just a bit easier </title>
         <meta name= "keywords" content="Food, doing chores, house materials"
         <meta name= "author"   content= "Taneya Becton">
       </head>
