--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
         <title> Life hacks that could make things just a bit easier </title>
         <meta name= "keywords" content="Food, doing chores, house materials"
         <meta name= "author"   content= "Taneya Becton">
-      </head>
-      <body>
+    </head>
+    <body>
         <p>How to make a person's life easier:</p>
         <p>A second paragraph about life hacks </p>
-      </body>
-    </html>
 
            <h1> Welcome to Taneya's Website! </h1>
            <p> This is what's going to change people's daily struggles in life. You are going to be amazed and shocked of what us people are capable of.</p>
            
            <h2> Member sites</h2>
            
-           <h3><a href="">1000 Life hacks</a></h3>
+           <h3><a href="http://www.1000lifehacks.com">1000 Life hacks</a></h3>
            <p> On this site this person  writes 1000 hacks!</p>
+    </body>
+</html>
