--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name= "author"   content= "Taneya Becton">
     </head>
     <body>
-        <p>How to make a person's life easier:</p>
+        <p id="bp">How to make a person's life easier:</p>
         <p>A second paragraph about life hacks </p>
 
            <h1> Welcome to Taneya's Website! </h1>
