--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name= "author"   content= "Taneya Becton">
     </head>
     <body>
-        <p id="bp">How to make a person's life easier:</p>
-        <p>A second paragraph about life hacks </p>
+        <p class="bp">How to make a person's life easier:</p>
+        <p class="bp">A second paragraph about life hacks </p>
 
            <h1> Welcome to Taneya's Website! </h1>
            <p> This is what's going to change people's daily struggles in life. You are going to be amazed and shocked of what us people are capable of.</p>
