--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html> 
     <head>
         <title> Life hacks that could make things just a bit easier </title>
-        <meta name= "keywords" content="Food, doing chores, house materials,etc.."
+        <link href="stylesheet.css">
+        <meta name= "keywords" content="Food, doing chores, house materials,etc..">
         <meta name= "author"   content= "Taneya Becton">
     </head>
     <body>
