--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
     <head>
         <title> Life hacks that could make things just a bit easier </title>
-        <link type="text/css" src="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <meta name= "keywords" content="Food, doing chores, house materials,etc..">
         <meta name= "author"   content= "Taneya Becton">
     </head>
