--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <p> On this site this person  writes 1000 hacks!</p>
            
            <h4> A couple things you could do...</h4>
-           <p class="bp">Paint all the keys you have with nail polish this would help with organizing such a headache!
+           <p class >Paint all the keys you have with nail polish this would help with organizing such a headache!
            Also there are many more hacks like to make life more fun. </p>
            
     </body>
