--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
            <h4> A couple things you could do...</h4>
            <p class=class >Paint all the keys you have with nail polish this would help with organizing such a headache!
            Also there are many more hacks like to make life more fun. </p>
+           <img class="small_img"
+           src=
            
     </body>
 </html>
