--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <p class=class >Paint all the keys you have with nail polish this would help with organizing such a headache!
            Also there are many more hacks like to make life more fun. </p>
            <img class="small_img"
-           src=
+           src= "https://github.com/Tbecton/Tbecton.github.io/blob/master/Unknown-1.jpeg" >
            
     </body>
 </html>
