--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
            <h4> A couple things you could do...</h4>
            <p class=class >Paint all the keys you have with nail polish this would help with organizing such a headache!
            Also there are many more hacks like to make life more fun. </p>
-           <img class="small_img"
-           src= "https://github.com/Tbecton/Tbecton.github.io/blob/master/Unknown-1.jpeg" >
+           <img class="small_img" src="Unknown-1.jpeg">
            
     </body>
 </html>
