--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <p> On this site this person  writes 1000 hacks!</p>
            
            <h4> A couple things you could do...</h4>
-           <p class=class >Paint all the keys you have with nail polish this would help with organizing such a headache!
+           <p class=class >Do you have a lot of keys? Yes! Then you should try this idea out and paint all the keys you own with a specific color. Not only would it make the keys look more cute but would also help with organizing them.
            Also there are many more hacks like to make life more fun. </p>
            <img class="small_img" src="Unknown-1.jpeg">
            
