--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
            <p class=class >Do you have a lot of keys? Yes! Then you should try this idea out and paint all the keys you own with a specific color. Not only would it make the keys look more cute but would also help with organizing them.
            Also there are many more hacks like to make life more fun. </p>
            <img class="small_img" src="Unknown-1.jpeg">
+          
+           <h5> How about another one?</h5>
+           <p classs= class > Do you have a lot of electrical cords that get annoying? There's a very easy and cheap solution. Paperclips!</p>
+           <img
            
     </body>
 </html>
