--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           
            <h5> How about another one?</h5>
            <p classs= class > Do you have a lot of electrical cords that get annoying? There's a very easy and cheap solution. Paperclips!</p>
-           <img
+           <img class="_u6" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT024DUuOz7yATobm3AClPllLGorU3CYlsGSA2MugWOy4t2-QTtXUuJMCc" alt="" onload="this.style.display='block'" style="display: block;">
            
     </body>
 </html>
