--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html> 
     <head>
+        <script>
+        src=jQuery v2.2.3</script>
+     
         <title> Life hacks that could make things just a bit easier </title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <meta name= "keywords" content="Food, doing chores, house materials,etc..">
@@ -27,5 +30,9 @@
            <p classs= class > Do you have a lot of electrical cords that get annoying? There's a very easy and cheap solution. Paperclips!</p>
            <img class="_u6" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT024DUuOz7yATobm3AClPllLGorU3CYlsGSA2MugWOy4t2-QTtXUuJMCc" alt="" onload="this.style.display='block'" style="display: block;">
            
+           <aside> 
+              <p> In the box to the right, different ideas should appear when you click on the navigation button</p>
+           </aside>
+           <article></article>
     </body>
 </html>
