--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
     <head>
         <script>
-        src=jQuery v2.2.3</script>
+        src=
      
         <title> Life hacks that could make things just a bit easier </title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
