--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html> 
     <head>
-        <script>
-        src=
-     
         <title> Life hacks that could make things just a bit easier </title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <meta name= "keywords" content="Food, doing chores, house materials,etc..">
         <meta name= "author"   content= "Taneya Becton">
+        <script type="text/javascript" src="jquery-2.2.3.min.js"></script>
+        <script type="text/javascript" src="application.js"></script>
     </head>
     <body>
         <p class="bp">How to make a person's life easier:</p>
