--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="application.js"></script>
     </head>
     <body>
-        <p class="bp">How to make a person's life easier:</p>
+        <p id="top" class="bp">How to make a person's life easier:</p>
     
 
            <h1> Welcome to Taneya's Website! </h1>
